<!-- Name: Rajkumar Patel -->
<!-- Student ID: N01289472 -->
<!-- Section: RNA -->

<resources>
    <string name="app_name">RajkumarLab2</string>
    <string name="mainscreen_enterbutton">Enter</string>
    <string name="firstscreen_title">Main Screen</string>
    <string name="homepage_title">Select Home</string>
    <string name="checkout_title">Checkout</string>
    <string name="payment_title">Payment</string>
    <string name="firstscreen_dialog">Would you like to exit?</string>
    <string name="firstscreen_dialog_yes">Yes</string>
    <string name="firstscreen_dialog_no">No</string>
    <string name="firstscreen_dialod_exit">Exit App</string>
    <string name="homepage_item1">These are the Apartments</string>
    <string name="homepage_item2">These are the Detached Homes</string>
    <string name="homepage_item3">These are the Semi-Detached Homes</string>
    <string name="payment_errorcheck">The Card Number Entered is invalid</string>
    <string name="payment_errorcheck2">The Name is invalid</string>
    <string name="paymentdialog">The Confirmation Number is: 1234567890</string>
    <string name="payment_dialog_ok">OK</string>
    <string name="payment_dialog_paid">You Have Paid</string>
    <string name="apartment_title">Apartment</string>
    <string name="detached_home_title">Detached Home</string>
    <string name="semi_detached_home_title">Semi-Detached Home</string>
    <string name="company_info_tv">Our company LeaseOrRentHome Inc. works with clients to find a perfect home for them. There are three types of homes shown to clients that are Apartments, Detached Homes, and Semi-Detached Homes.</string>
    <string name="apartment1_tv">40 Stevenson Road\n Etobicoke, ON M9V 2B2\n\n $1900/Month</string>
    <string name="apartment2_tv">715 Finch Ave\n North York, ON M3H 4X7\n\n $1600/Month</string>
    <string name="apartment3_tv">1 Canyon Avenue\n North York, ON M3H 4X8\n\n $1800/Month</string>
    <string name="apartment4_tv">2110 Keele St\n North York, ON M6M 3Z5\n\n $1300/Month</string>
    <string name="detached_home1_tv"> 51 Leila Jackson\n Toronto, ON M3L 0B2\n\n $2800/Month</string>
    <string name="detached_home2_tv"> 20 Woodgate Drive\n Toronto, ON M6N 4W3\n\n $2600/Month</string>
    <string name="detached_home3_tv"> 720 Bloor Street\n Toronto, ON L4Y 2N5\n\n $3000/Month</string>
    <string name="detached_home4_tv"> 16 Cobb Ave\n Toronto, ON M3L 2A1\n\n $2500/Month</string>
    <string name="semi_detached_home1_tv">17 Applebaum Terr\n Toronto, ON M3J 0E7\n\n $2800/Month</string>
    <string name="semi_detached_home2_tv">3367 Weston Rd\n Toronto, ON M9M 2V6\n\n $2300/Month</string>
    <string name="semi_detached_home3_tv">102 Northover St\n Toronto, ON M3L 1W7\n\n $2400/Month</string>
    <string name="semi_detached_home4_tv">135 Rodda Blvd\n Toronto, ON M1E 3A1\n\n $2200/Month</string>
    <string name="payment_tvtitle">Payment</string>
    <string name="cash_title">Cash</string>
    <string name="credit_card_title">Credit Card</string>
    <string name="debit_card_title">Debit Card</string>
    <string name="full_name_title">Full Name</string>
    <string name="credit_debit_card_number_title">Credit/Debit Card Number</string>
    <string name="validation_title">Validation</string>
    <string name="checkout_tv">Checkout</string>
</resources>